src/App.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');


                        /* VARIABLES */
:root{

    /* colors */
    --light-blue:#33a199;
    --medium-blue:#0a183d;
    --dark-blue: #08192d ;
    --ligh-purple:#8f5b73;
    --red:#ee2853;
    --dark-purple:#372b3f;

    /* font */
    --font: "Montserrat", sans-serif;
}

*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;

}

html{
    font-size: 20px;
}

body{
    background: blanchedalmond;
}

                       /* PRE LOADING */

.loading{
    position: relative;
    height: 100vh;
    width: 100%;
    text-align: center;
    background-color: var(--dark-blue);
    color: white;
    text-align: center;

}

.loading-image{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}


    

                        /* HEADER SECTION */


header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1.5rem 10%;
    background-color: #08192d;

}

li{
    list-style: none;
}

header li{
    font-family: var(--font);
    font-weight: 500;
    font-size: 1.1rem;
  
    
}



.mylink{
    cursor: pointer;
    color:#edf0f1 ;
    font-weight: 800;
    text-decoration: none;
    transition: all 0.3s ease 0s;
    
}

.nav-elements .mylink:hover{
    color: var(--red);
}


.nav-elements li{
    display:inline-block;
    padding: 0rem 1rem;
  

}

.grouped-logo li{
    display:inline-block;
    padding: 0rem 0.8rem;
   
}

.grouped-logo img{
    position: relative;
    
    
}


.logo{
    position: relative;
    font-size: 1.6rem;
    color: white;
    font-weight: 800;
    

}

                        /* LANDING PAGE'S BODY */

.container1{
    background-color: var(--medium-blue) ;
    width: 100%;
    height: 100vh;
    position: fixed;
}

.body-content{
    position: absolute;
    width: 100%;
    display: flex;
    text-align: center;
    padding-top: 10rem;
    justify-content: space-around;
}

.body-content img{
    position: relative;
    bottom: 4rem;
}



.actual-content{
    font-family: var(--font);
    position: relative;
    bottom: 5rem;
    text-align: justify;
}

.actual-content h1{
    font-size: 10rem;
    color: white;
    padding-bottom: 0.4rem;
}

.actual-content p{
    font-size: 1.5rem;
    color: white;
    position: relative;
    left: 0.6rem;
}


                                    /* SIGN IN & UP PAGES */



.container{
    background: white;
    width: 100%;
    height: 100vh;
    position: fixed;

}

.myform{
    position: relative;
    top: -1.4rem;
    width: 60%;
    margin:auto;
    padding-top: 4rem;
    padding-bottom:4rem;
}

.positional{
    position: relative;
    top:1rem;
}



.myform h5{
    font-family: var(--font);
    font-size: 2rem;
    color: var(--medium-blue);
}

.myform input{
    color: var(--medium-blue);
    font-family: var(--font);;
    font-size: 0.8rem;
    width: 100%;
    padding: 0.6rem 1rem;
    margin-top: 1rem;
    border: none;
    border-bottom: 0.1rem solid var(--dark-blue);
    
}

.myform input:focus{
    
    outline: none;
    border-bottom: 0.1rem solid var(--red);
    
} 

.form-btn{

    font-family: var(--font);
    font-size: 0.8rem;
    border: 0.01rem solid var(--red);
    background-color:var(--red); 
    padding: 0.7rem;
    width: 4.5rem;
    color: white;
    margin-top: 1.2rem;
}

.form-btn:hover{
    cursor: pointer;
    border: 0.01rem solid var(--dark-blue);
    background: var(--dark-blue);
}


.input-container{
    position: relative;
    top: 0.5rem;
}

.input-field{
    margin-bottom: 0.8rem;
}


.myform ::placeholder {
    color: var(--medium-blue);
    font-family: var(--font);
    font-size: 0.79rem;
  }

  .positional-field{
      margin-bottom: 1rem;
      position: relative;
  }

  .pos-btn{
      margin-top: 2rem;
  }


  .authError{
      font-family: var(--font);
      color:red;
      font-size: 1rem;
      text-align: center;
      margin-top: 2rem;
  }



                                            /* DASHBOARD */


.wrapper{
    display: flex;
    height:100%;
    padding-bottom:6rem;
}

/* SIDE BAR */
#sidebar{
    display: flex;
    flex-direction: column-reverse;
    font-family: var(--font);
    background-color: var(--dark-blue);
    color:white;
    width: 11rem;
    height: 100vh;
    position: fixed;
   
}

 .title-logo{
    position: absolute;
    top: 2rem;
    left: 1.1rem;
}



 .title-sidebar{
    font-size: 1.8rem;
    position: relative;
    left: 0.1rem;
}

#sidebar img{
    position: relative;
    top: 0.2rem;
    bottom: 0.3rem;
    right: 0.2rem;
}

.info-container{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    position: relative;
    bottom: 1.5rem;
}

.info-container .name{
    font-size: 0.9rem;
    position: relative;
    bottom: 0.1rem;
    left: 0.3rem;
}


.initials {
    cursor: pointer;
    padding-top: 2.2%;
    padding-right:1% ;
    font-size: 0.95rem;
    text-align: center;
    height: 1.8rem;
    width: 1.9rem;
    background-color: var(--red);
    border-radius: 50%;
    display: inline-block;
    position: relative;
    bottom: 0.48rem;
    right: 0.6rem;
    margin-left:1rem;
  }


                    /* POPOVER */
  #popover-basic{

      display: flex;
      flex-direction: column;
      font-family: var(--font);
      font-size: 0.7rem;
      background-color: white;
      border-radius: 0.5rem;
      height: 10rem;
      width: 12rem;
      box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 5px 0px, rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0,0, 0, 0.12) 0px 3px 1px -2px;
      top: -2.5rem  !important;
      left: 0.2rem !important;
      position: relative;
      
  }

  .popover-element{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding: 5%;
    border-bottom: 1px solid lightgray;
    flex: 1px;
  }



  
 
  .popover-name{
      display: inline-block;
      padding-left: 3%;
  }

  .popover-initials{
        color: white;
        padding-top: 2.7%;
        font-size: 0.8rem !important;
        text-align: center;
        height: 1.5rem;
        width: 1.6rem;
        background-color: var(--red);
        border-radius: 50%;
        display: inline-block;
        position: relative;
        bottom: -0.1rem;
        right: 0.4rem;
  }


 
  
  .logout{
      text-decoration: none;
      color: black !important;
      position: relative;
      
      
  }

            /* DASHBOARD MAIN CONTENT */


.dashboard-page{
    flex-grow: 1;
    padding-left: 11rem;
    position: relative;
}

.tasks{
   
    width: 70%;
    margin: 6.5rem auto -3.5rem;
    overflow: auto;
}

.day-tasks{
    font-size: 0.8rem ;
    font-family: var(--font);
    background-color: var(--dark-blue);
    color:white;
    width: fit-content;
    padding: 0.2rem 0.5rem 0.2rem 0.5rem;

}

.task-container{
    background-color: white;
    padding: 1rem;
    color: var(--dark-blue);
    font-family: var(--font) ;
    font-size: 0.8rem;
    box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 5px 0px, rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0,0, 0, 0.12) 0px 3px 1px -2px;
    
}

.task-elements{
    position: relative;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 1rem;
}

.task-title{
    position: absolute;
    left: 1rem;
}

.task-actions{
    position: absolute;
    right: 2rem;
}

                                                    /* TASK FORM */

.task-form-container{
    z-index: 1;
    position: fixed;
    width: 100%;
    border: 1px solid white;
    background-color: white;
    box-shadow: 5px 0px 10px 0px rgba(0,0,0,.5);
}

.task-form{
    position: relative;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 1.3rem;
}

.task-form input{
    font-family: var(--font) ;
    font-weight: 900;
    font-size: 0.8rem;
    color: var(--dark-blue);
    border: none;
    width: 70%;
}

.task-form input:focus{
    outline:none
}

.task-form ::placeholder{
    font-family: var(--font);
    font-size: 1rem;
   
}

.task-form-right{
    width: 30%;
    font-weight: 900;
    font-family: var(--font);
}

.time{
    margin-right: 0.7rem;
}

.favicon{
    cursor: pointer;
    margin-right: 0.5rem;
    font-size: 0.9rem;
}



                    /* RESPONSIVENESS */

@media only screen and (max-width: 600px){


    .body-content{
        display: flex;
        flex-direction: column-reverse;
        
        
    }

    .body-content img{
        width:28%;
        margin: auto;
        position: relative;
        bottom: 4rem;
        
    }


    .actual-content{
        position: relative;
        bottom: 3rem;
    }

    .actual-content h1{
        font-size: 2rem;
        color: white;
        padding-bottom: 1rem;
    }
    
    .actual-content p{
        font-size: 1.16rem;
        color: white;
        width: 80%;
        margin: auto;
    }
    

}

